--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "todo-app",
-  "version": "1.0.0",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -14,19 +14,16 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-beautiful-dnd": "^13.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.41",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
     "typescript": "^5.4.5",
-    "vite": "^6.3.5"
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^6.3.5",
+    "eslint": "^8.56.0"
   }
 }
